cmake_minimum_required(VERSION 2.6)
PROJECT(test)

set(CMAKE_MODULE_PATH /usr/share/OGRE/cmake/modules)
set(CMAKE_MODULE_PATH /usr/local/lib/OGRE/cmake)

FIND_PACKAGE(OGRE)
FIND_PACKAGE(OIS)

INCLUDE_DIRECTORIES(
    ${OGRE_INCLUDE_DIRS}
    ${OIS_INCLUDE_DIRS}
)

FILE(GLOB SRCS src/*.cpp)
FILE(GLOB HEADERS include/*.h)

ADD_EXECUTABLE(test ${SRCS} ${HEADERS})
TARGET_LINK_LIBRARIES(test ${OIS_LIBRARIES} ${OGRE_LIBRARIES})